--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.11.3",
     "bootswatch": "^5.3.2",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^11.0.2",
